@@ -1,12 +1,23 @@
 package pl.edu.ur.blokur.service;
 
+import java.io.InputStreamReader;
 import java.math.BigDecimal;
+import java.nio.charset.StandardCharsets;
+import java.time.LocalDate;
+import java.time.format.DateTimeParseException;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.HashSet;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
+import org.apache.commons.csv.CSVFormat;
+import org.apache.commons.csv.CSVParser;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
+import org.springframework.web.multipart.MultipartFile;
 import pl.edu.ur.blokur.dto.ApartmentTransactionsResponse;
+import pl.edu.ur.blokur.dto.CsvImportErrorDto;
+import pl.edu.ur.blokur.dto.CsvImportResultDto;
 import pl.edu.ur.blokur.dto.FinancialTransactionRequest;
 import pl.edu.ur.blokur.dto.FinancialTransactionResponse;
 import pl.edu.ur.blokur.exception.NotFoundException;
@@ -45,7 +56,7 @@ public class FinancialTransactionService {
      * @throws NotFoundException jeśli lokal nie istnieje
      */
     public ApartmentTransactionsResponse getTransactionsForApartment(UUID apartmentId) {
-        Apartment apartment =
+        var apartment =
                 apartmentRepository
                         .findById(apartmentId)
                         .orElseThrow(
@@ -53,12 +64,12 @@ public class FinancialTransactionService {
                                         new NotFoundException(
                                                 "Lokal o ID " + apartmentId + " nie istnieje"));
 
-        List<FinancialTransactionResponse> transactions =
+        var transactions =
                 financialTransactionRepository
                         .findByApartmentIdOrderByTransactionDateDesc(apartmentId)
                         .stream()
                         .map(this::toResponse)
-                        .collect(Collectors.toList());
+                        .toList();
 
         return new ApartmentTransactionsResponse(apartment.getCurrentBalance(), transactions);
     }
@@ -79,7 +90,7 @@ public class FinancialTransactionService {
     @Transactional
     public FinancialTransactionResponse createTransaction(
             UUID apartmentId, FinancialTransactionRequest request, String userEmail) {
-        Apartment apartment =
+        var apartment =
                 apartmentRepository
                         .findById(apartmentId)
                         .orElseThrow(
@@ -87,7 +98,7 @@ public class FinancialTransactionService {
                                         new NotFoundException(
                                                 "Lokal o ID " + apartmentId + " nie istnieje"));
 
-        User user =
+        var user =
                 userRepository
                         .findByEmail(userEmail)
                         .orElseThrow(
@@ -97,7 +108,7 @@ public class FinancialTransactionService {
                                                         + userEmail
                                                         + " nie istnieje"));
 
-        FinancialTransaction transaction = new FinancialTransaction();
+        var transaction = new FinancialTransaction();
         transaction.setApartment(apartment);
         transaction.setType(request.getType());
         transaction.setAmount(request.getAmount());
@@ -105,13 +116,14 @@ public class FinancialTransactionService {
         transaction.setTransactionDate(request.getTransactionDate());
         transaction.setRecordedBy(user);
 
-        FinancialTransaction saved = financialTransactionRepository.save(transaction);
+        var saved = financialTransactionRepository.save(transaction);
 
-        BigDecimal currentBalance = apartment.getCurrentBalance();
+        var currentBalance = apartment.getCurrentBalance();
         if (currentBalance == null) {
             currentBalance = BigDecimal.ZERO;
         }
         apartment.setCurrentBalance(currentBalance.add(request.getAmount()));
+
         apartmentRepository.save(apartment);
 
         return toResponse(saved);
@@ -132,5 +144,180 @@ public class FinancialTransactionService {
                 transaction.getDescription(),
                 transaction.getTransactionDate(),
                 transaction.getRecordedBy().getEmail());
+    }
+
+    /**
+     * Importuje transakcje finansowe z pliku CSV. Przetwarza wiersz po wierszu - zapisuje poprawne
+     * i zbiera błędy.
+     *
+     * @param file plik CSV
+     * @param userEmail adres e-mail użytkownika zlecającego import
+     * @return podsumowanie zaimportowanych wierszy i błędów
+     */
+    public CsvImportResultDto importTransactionsFromCsv(MultipartFile file, String userEmail) {
+        var user =
+                userRepository
+                        .findByEmail(userEmail)
+                        .orElseThrow(
+                                () ->
+                                        new NotFoundException(
+                                                "Użytkownik o adresie "
+                                                        + userEmail
+                                                        + " nie istnieje"));
+
+        List<CsvImportErrorDto> errors = new ArrayList<>();
+        int importedCount = 0;
+        int errorCount = 0;
+
+        var allowedTypes = new HashSet<>(Arrays.asList("WPLATA", "NALICZENIE", "KOREKTA"));
+
+        try (var reader = new InputStreamReader(file.getInputStream(), StandardCharsets.UTF_8);
+                var csvParser =
+                        new CSVParser(
+                                reader,
+                                CSVFormat.DEFAULT
+                                        .builder()
+                                        .setHeader(
+                                                "apartment_id",
+                                                "date",
+                                                "type",
+                                                "amount",
+                                                "description")
+                                        .setSkipHeaderRecord(true)
+                                        .setIgnoreHeaderCase(true)
+                                        .setTrim(true)
+                                        .build())) {
+
+            for (var csvRecord : csvParser) {
+                int lineNumber =
+                        (int) csvRecord.getRecordNumber()
+                                + 1; // getRecordNumber starts at 1, but we skip header, wait,
+                // getRecordNumber counts lines processed
+
+                try {
+                    var apartmentIdStr = csvRecord.get("apartment_id");
+                    var dateStr = csvRecord.get("date");
+                    var type = csvRecord.get("type");
+                    var amountStr = csvRecord.get("amount");
+                    var description = csvRecord.get("description");
+
+                    // Validate UUID
+                    UUID apartmentId;
+                    try {
+                        apartmentId = UUID.fromString(apartmentIdStr);
+                    } catch (IllegalArgumentException e) {
+                        errors.add(
+                                new CsvImportErrorDto(
+                                        lineNumber, "Nieprawidłowy format apartment_id"));
+                        errorCount++;
+                        continue;
+                    }
+
+                    // Validate Date
+                    LocalDate transactionDate;
+                    try {
+                        transactionDate = LocalDate.parse(dateStr);
+                    } catch (DateTimeParseException e) {
+                        errors.add(
+                                new CsvImportErrorDto(
+                                        lineNumber,
+                                        "Nieprawidłowy format daty (wymagany ISO np. YYYY-MM-DD)"));
+                        errorCount++;
+                        continue;
+                    }
+
+                    // Validate Type
+                    if (!allowedTypes.contains(type.toUpperCase())) {
+                        errors.add(
+                                new CsvImportErrorDto(
+                                        lineNumber,
+                                        "Nieznany typ operacji (dozwolone: WPLATA, NALICZENIE,"
+                                                + " KOREKTA)"));
+                        errorCount++;
+                        continue;
+                    }
+
+                    // Validate Amount
+                    BigDecimal amount;
+                    try {
+                        amount = new BigDecimal(amountStr);
+                    } catch (NumberFormatException e) {
+                        errors.add(
+                                new CsvImportErrorDto(
+                                        lineNumber, "Kwota musi być poprawną liczbą (np. 150.50)"));
+                        errorCount++;
+                        continue;
+                    }
+
+                    // Validate Apartment existence
+                    var apartment = apartmentRepository.findById(apartmentId).orElse(null);
+                    if (apartment == null) {
+                        errors.add(
+                                new CsvImportErrorDto(
+                                        lineNumber, "Lokal o podanym ID nie istnieje"));
+                        errorCount++;
+                        continue;
+                    }
+
+                    // Proceed to save inside an isolated try block in case DB fails
+                    try {
+                        saveImportedTransaction(
+                                apartment,
+                                type.toUpperCase(),
+                                amount,
+                                description,
+                                transactionDate,
+                                user);
+                        importedCount++;
+                    } catch (Exception e) {
+                        errors.add(
+                                new CsvImportErrorDto(
+                                        lineNumber,
+                                        "Błąd podczas zapisu do bazy danych: " + e.getMessage()));
+                        errorCount++;
+                    }
+
+                } catch (IllegalArgumentException e) {
+                    errors.add(
+                            new CsvImportErrorDto(
+                                    lineNumber,
+                                    "Błąd odczytu wiersza (prawdopodobnie brak wymaganej liczby"
+                                            + " kolumn)"));
+                    errorCount++;
+                }
+            }
+
+        } catch (Exception e) {
+            throw new RuntimeException("Błąd podczas odczytu pliku CSV: " + e.getMessage(), e);
+        }
+
+        return new CsvImportResultDto(importedCount, errorCount, errors);
+    }
+
+    @Transactional
+    protected void saveImportedTransaction(
+            Apartment apartment,
+            String type,
+            BigDecimal amount,
+            String description,
+            LocalDate transactionDate,
+            User user) {
+        var transaction = new FinancialTransaction();
+        transaction.setApartment(apartment);
+        transaction.setType(type);
+        transaction.setAmount(amount);
+        transaction.setDescription(description);
+        transaction.setTransactionDate(transactionDate);
+        transaction.setRecordedBy(user);
+
+        financialTransactionRepository.save(transaction);
+
+        var currentBalance =
+                apartment.getCurrentBalance() != null
+                        ? apartment.getCurrentBalance()
+                        : BigDecimal.ZERO;
+        apartment.setCurrentBalance(currentBalance.add(amount));
+
+        apartmentRepository.save(apartment);
     }
 }
